node server added in package.json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "watch": "nodemon --watch \"src/\" --exec \"node src/app.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm start"
+    "start": "node server"
   },
   "repository": {
     "type": "git",
