--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "conference-chat",
   "version": "0.0.1",
   "description": "implementaion of conference-chat",
-  "main": "src/app.js",
+  "main": "server.js",
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
